[tool.poetry]
name = "ch-run-wrapper"
version = "0.1.0"
description = ""
authors = ["Apuã Paquola <apuapaquola@gmail.com>"]
readme = "README.md"
packages = [{include = "ch_run_wrapper"}]

[tool.poetry.scripts]
ch-run-wrapper = "ch_run_wrapper:main"


[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
